PR/50571: David Binderman: src/sys/fs/udf/udf_subr.c:6465: obvious performance tidyup